# ChangeLog for dev-cpp/yaml-cpp
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/yaml-cpp/ChangeLog,v 1.7 2013/05/20 02:09:05 neurogeek Exp $

*yaml-cpp-0.5.1 (20 May 2013)

  20 May 2013; <neurogeek@gentoo.org> +yaml-cpp-0.5.1.ebuild:
  Version bump. Closes bug #466136. Thanks to Necoro and Jer.

  28 Mar 2012; Tomáš Chvátal <scarabeus@gentoo.org> yaml-cpp-0.3.0.ebuild:
  Stable 0.3.0 on amd64 and x86.

*yaml-cpp-0.3.0 (27 Feb 2012)

  27 Feb 2012; Tomáš Chvátal <scarabeus@gentoo.org> +yaml-cpp-0.3.0.ebuild,
  -yaml-cpp-0.2.7.ebuild:
  Version bump to 0.3.0. Fixes bug#405851. Thanks to Sergei Shilovsky for ebuild
  patch.

  11 Nov 2011; Jesus Rivero <neurogeek@gentoo.org> metadata.xml:
  Added myself to metadata.xml

  11 Nov 2011; Tomáš Chvátal <scarabeus@gentoo.org> metadata.xml:
  Drop me from maint.

  16 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org> yaml-cpp-0.2.7.ebuild:
  Use correct includedir in .pc file.

*yaml-cpp-0.2.7 (16 Sep 2011)

  16 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org> +yaml-cpp-0.2.7.ebuild,
  +metadata.xml:
  Initial commit of this library. Closes the bug #293492.
