@@ -5,17 +5,13 @@ AUX 1.7.2-docs_missing_destdir.patch 1437 SHA256 e5001eb1c60c61a55edc6f122e62bd8
 AUX tvmet-1.7.2-respect-cxxflags.patch 1112 SHA256 311aa4f05ed2f4198dc607a184dd25297da9b765a4cbe802376b8a9588d0ba19 SHA512 3ef1ee581d4aec3398c1013b0f10d41d7afe31892996456788e352af8b058d524e4c2126b4e496c7104f971c0f88943b3a4d136ae9efbe57ea19e51832d00ea9 WHIRLPOOL d540ed9a603cd462a597892743e83df1c2fda32f52c5c3490fbf213d86a2ba68950e825917a4bdec61c5e6faae14021961d2e554e6ace20c45e776bc47d309e3
 DIST tvmet-1.7.2.tar.bz2 532599 SHA256 ca4a1e72afb70ca34bbd7cb0500a159003f5c270903f1b303af48a883dbe13ae SHA512 0e57d2ec68566d02c09c3d8b35662b3737e6f074271e5e90c1354956636d2ada74859bb867d63684edaa93d7ab6a470a3141d02a04164101ff9d8d14f3d6c5fb WHIRLPOOL 049901010e48647278c73e315eda041f3f51c4a0933128d8bc24cbd8cbbdc0d166502a2d192f6d47df9f20fe33b32a78f6c02b2cd72897822d88dbae0bbb3c44
 EBUILD tvmet-1.7.2-r1.ebuild 1075 SHA256 a1cf1363fe09d7fcc6304383e29b7b2735470f6eabcfd9613cd3eeeb42460423 SHA512 1d4496b9f3cc261466e1ae38d01d13b2002d0b71a5c345a27d23ea1c4b3f761041cfeeab1e66a9da8b3ba849fcd87b0cad475d29dca5e6033d6fc0f53b5bedc7 WHIRLPOOL fbd2049683b65928df3e3c51d26db6128af6694b3a0b5dd0d5ddb009d9cd087bcce95466aca47ed925da0801543c1bb64f16f1c565656d89629c3d2298625375
-EBUILD tvmet-1.7.2-r2.ebuild 1220 SHA256 0117fb067cdfa20bae8e654a416e5f6b24e3a919bdefe9d57f8b4eba2bf90855 SHA512 ed9def321be5b7614cb95f6d390895ca6cd46f27c2f65812e28cf0919e648ab2f2884abd9cb5a5870f16fe78ab391cbe42ef0e8f83305db5784d1dca61c85746 WHIRLPOOL d12828d618b2fecf0ea3002dc04641ad88a3e5a384c7a6ad50eb20724ecc04b5f1f7def8af8fa99b9ec9834a0f2f2eddaa989d200234d0e025bd73434a094e57
-MISC ChangeLog 1372 SHA256 7bd6aad8083e6b08df009054ba2afa898a02e93da418b7d5ab444a2905df7698 SHA512 a0391ceecdab5dfbc5a789c5acc8a76490a8a86e8a22577cac93cabeecb90e2f1f52aa68113d3e94cb290a751ab9d812653de4696352518144f571ea59d68f6a WHIRLPOOL a4c76951567f21c1781f521555626dfc389a43d7514556ecd1e7a4f412af64420c240dab4f99391d3c823aad82035c7346860893de089dd5380283e94b8ee3b0
+EBUILD tvmet-1.7.2-r2.ebuild 1235 SHA256 679bf5c01b389617593dace61061a691fee55ece48e7d2ab689fdc76d3296602 SHA512 cd03c33198254e516d9f57c1a16fce59787f2331afdedf64395ea20efc521f7b5de3f0eb7ded5973588d6a0d56502d27df1d1524d37f5775079d5cac671a6236 WHIRLPOOL 5f63be4c1b5efdbd3134fd3caaa27c4683abea7bc57d9103c30f5555a33fa719e99b57ff73fe436942ae3a608accd2008e3083d765e05d37ae232f8d650d0494
+MISC ChangeLog 1487 SHA256 ded58c9df560b9163242e2675f073610409a038cd2c0395d631e6b1d023381b4 SHA512 c66b7f53103fb93e1c8e0b1bd5971dd7bb355aef87586680837e2055ea4746beb85db3ddd4beee0000141e1a640a984a1539707a1faaa6aa6e27f0b046a6ae2b WHIRLPOOL c5c1e29b30f1a869eaf1ec3b55613fbe32590f518f918c89503be7885abe0606e22259472de75a3b2b558f55c359b06281bcfe5b1c6d426120f2010e70a0e114
 MISC metadata.xml 157 SHA256 e44459c87638f81370c6caee91f75bf864c56875d2b17f69ec7473c81ff58f9f SHA512 4f271b4deed62e5ddabaa61b2c0ba18af241b6128455590e4162da56403962a21c39cb494e54357dc83d944b9756d3cb8ecc5be1f73ac12505d112610dc1eb05 WHIRLPOOL 78c6cca8353a608f6baadb9a88cd1e10348f39dad3d17151f929bb8d91e4cf64840e060b6c7083663c8d56320faddbc855863654e34d1280fa3c24cadeb9c653
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRIPlnAAoJEB58/HceDKhfZBsH/AtVQrdftNaTx820nxjaGv3g
-UrclQMFnIC4b4NvV1aEuIYw2YPG4IOpQ++AZtBcG+pb3WouBXP+KLkQxT4IDpd1b
-Cv5BunRbC4EizPUXKMoym/xnI691wkX92aDjCLhkOe7toXv24tDq5UgeVBmNC2ib
-Jz/PV9SDnVmL9hZLNQGvLO47uI3me8FFUZDimipLHsEzvLsEQAdMdM+KjJW0uFOl
-nt+pRGRb6yd184WuH++5ZNQgGSc2QMtoYVM7e9CmORbtDzXlaNippXMmuHulZhfg
-7qUo1Qmy08p4ucNQ765nL3ClB7Af95uCz4JbRV9rQwcDpZDyJzehVFCvRP2FXeE=
-=qdgc
+iEYEAREIAAYFAlG+mGQACgkQ1ycZbhPLE2BJ1QCgl7QHpqF4TefM/kjqrKsM6QaK
+CooAniWBz3L16+ci+YY2Y8VK4pTmkvco
+=GEFn
 -----END PGP SIGNATURE-----
