@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/tvmet
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/tvmet/ChangeLog,v 1.4 2013/02/17 15:38:13 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/tvmet/ChangeLog,v 1.5 2013/06/17 05:01:44 bicatali Exp $
+
+  17 Jun 2013; Sébastien Fabbro <bicatali@gentoo.org> tvmet-1.7.2-r2.ebuild:
+  Keyword amd64-linux and x86-linux
 
 *tvmet-1.7.2-r2 (17 Feb 2013)
 
