@@ -1,6 +1,9 @@
 # ChangeLog for sys-cluster/mpich2
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/mpich2/ChangeLog,v 1.89 2013/02/28 14:33:17 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/mpich2/ChangeLog,v 1.90 2013/06/17 04:53:03 bicatali Exp $
+
+  17 Jun 2013; Sébastien Fabbro <bicatali@gentoo.org> mpich2-1.5.ebuild:
+  Keyword amd64-linux and x86-linux
 
   28 Feb 2013; Jeroen Roovers <jer@gentoo.org> mpich2-1.5.ebuild:
   Stable for HPPA (bug #458206).
